[package]
name = "clackit"
description = "A rust cli tool to make a normal keyboard to sound like a  mechanical keyboard"
version = "0.1.0"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "clackit"

[dependencies]
