[package]
name = "clackit"
description = "A rust cli tool to make a normal keyboard to sound like a  mechanical keyboard"
version = "0.1.0"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "clackit"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
flume = "0.11.0"
lazy_static = "1.5.0"
libc = "0.2.155"
once_cell = "1.19.0"
rdev = "0.5.3"
rodio_wav_fix = "0.15.0"
serde_json = "1.0.120"
